# svc-discovery

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.yml  log4rs.yaml
.compose/aetheric-svc/: test-server.yaml
.github/workflows/: rust_ci.yml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: lib.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: rest.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
server/: Cargo.toml  README.md
server/src/: config.rs  lib.rs  main.rs  test_util.rs
server/src/grpc/: client.rs  server.rs
server/src/rest/: api.rs  mod.rs  server.rs
server/src/rest/api/: health.rs  mod.rs  uss.rs
