[workspace]
members  = ["server", "client-grpc", "client-rest"]
resolver = "2"

[workspace.package]
edition      = "2021"
homepage     = "https://www.arrowair.com/docs/documentation/services/intro"
keywords     = ["vtol", "server", "template"]                               # max 5
license-file = "LICENSE"
repository   = "https://github.com/Arrow-air/svc-discovery"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
