[workspace]
members  = ["server", "client-grpc", "client-rest"]
resolver = "2"

[workspace.package]
edition      = "2021"
homepage     = "https://www.aetheric.nl"
keywords     = ["vtol", "server", "template"]                  # max 5
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-discovery"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
