[package]
description = "Types used to communicate with the REST API of svc-discovery."
name        = "svc-discovery-client-rest"
version     = "0.0.2-develop.3"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
strum      = { version = "0.26", features = ["derive", "strum_macros"] }

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[[example]]
name = "rest"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20", features = ["full"] }
uuid  = { version = "1.3", features = ["v4"] }

[dev-dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"
