[package]
description = "Types used to communicate with the REST API of svc-discovery."
name        = "svc-discovery-client-rest"
version     = "0.1.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
serde      = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
strum      = { version = "0.26", features = ["derive", "strum_macros"] }

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "v2.0.0"

[[example]]
name = "rest"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20", features = ["full"] }
