[package]
description = "Aetheric discovery service GRPC server"
keywords    = ["vtol", "u-space", "grpc", "rest", "discovery"] # max 5
name        = "svc-discovery"
version     = "0.1.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = ["svc-gis-client-grpc/mock"]
# Will use a stubbed backend connection, only use for tests!
stub_backends = ["svc-gis-client-grpc/stub_client"]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow       = "1.0"
axum         = "0.6"
cargo-husky  = "1"
clap         = { version = "4.0", features = ["derive"] }
config       = "0.13"
dotenv       = "0.15"
futures      = "0.3"
geo          = "0.27"
hyper        = "0.14"
log          = "0.4"
num-traits   = "0.2"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
strum        = { version = "0.26", features = ["derive", "strum_macros"] }
tokio        = { version = "1.20", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.8"
tower        = { version = "0.4", features = ["limit", "util"] }
tower-http   = { version = "0.4", features = ["cors", "trace"] }

[dependencies.svc-gis-client-grpc]
git = "https://github.com/aetheric-oss/svc-gis.git"
tag = "v0.2.0"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "v2.0.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
rand = "0.8"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"
